# rag_showdown

./: .gitignore  README.md  app.py  auth.py  main.py  pyproject.toml  requirements.txt  security_middleware.py  setup.py  test_api.py  test_frontend.html
agent/: __init__.py  agent.py  prompts.py  tools.py
data_processor/: kb_processor.py  kb_retriever.py
pipelines/: config.py  configurable_rag.py  cos_sim_pipe.py  hybrd_rag.py
rag_data_creator/abstracts/: __init__.py  abstracts_processor.py  process_abstracts.py
static/: app.js  index.html  styles.css
