[project]
name = "rag-showdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bm25s>=0.2.12",
    "fastapi>=0.100.0",
    "flashinfer-python>=0.2.5",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.25",
    "langchain-core>=0.3.56",
    "logfire>=1.0.0",
    "openai>=1.76.0",
    "psutil>=5.9.5",
    "pydantic>=2.0.0",
    "rerankers>=0.9.1.post1",
    "sentence-transformers>=4.1.0",
    "setuptools>=80.0.0",
    "sqlite-vec>=0.1.6",
    "uvicorn>=0.22.0",
    "vllm>=0.8.4",
]
